--- a/index.html
+++ b/index.html
@@ -836,8 +836,8 @@
   <section class="image-section">
     <div class="container">
       <div class="image-container">
-        <img src="/assets/maquina%20_alemana-BQHRoeAN.png" alt="Equipamiento de medición" />
-        <img src="/assets/Prism%20iO-CVrC9Ih0.png" alt="Prism iO" />
+        <img src="/assets/maquina%20_alemana-RD__Gh_h.png" alt="Equipamiento de medición" />
+        <img src="/assets/Prism%20iO-bWwhBAnf.png" alt="Prism iO" />
       </div>
     </div>
   </section>
