--- a/reset_5/index.html
+++ b/reset_5/index.html
@@ -125,7 +125,7 @@
         <!-- SECCIÓN: MAÑANA (RITUALES) -->
         <section id="section-morning" class="space-y-6">
             <!-- Imagen del raspador -->
-            <img src="https://raw.githubusercontent.com/sramirezramirez/epigeneticabarcelonacom/main/src/images/raspador.jpg" 
+            <img src="/raspado.png" 
                  alt="Raspador de lengua" 
                  class="section-image"
                  onerror="this.style.display='none'">
@@ -159,7 +159,7 @@
 
         <!-- SECCIÓN: MENÚ 5 DÍAS -->
         <section id="section-menu" class="space-y-6 step-hidden">
-            <img src="https://raw.githubusercontent.com/sramirezramirez/epigeneticabarcelonacom/main/comida.png" 
+            <img src="/comida.png" 
                  alt="Plan nutricional saludable" 
                  class="section-image"
                  onerror="this.style.display='none'">
@@ -220,7 +220,7 @@
 
         <!-- SECCIÓN: DÍA (POSTURA/MOVIMIENTO) -->
         <section id="section-day" class="space-y-6 step-hidden">
-            <img src="https://raw.githubusercontent.com/sramirezramirez/epigeneticabarcelonacom/main/respira.jpeg" 
+            <img src="/respira.jpeg" 
                  alt="Respiración consciente" 
                  class="section-image"
                  onerror="this.style.display='none'">
@@ -288,7 +288,7 @@
 
         <!-- SECCIÓN: NOCHE -->
         <section id="section-night" class="space-y-6 step-hidden">
-            <img src="https://raw.githubusercontent.com/sramirezramirez/epigeneticabarcelonacom/main/noche.png" 
+            <img src="/noche.png" 
                  alt="Cierre noche" 
                  class="section-image"
                  onerror="this.style.display='none'">
