--- a/index.html
+++ b/index.html
@@ -744,6 +744,20 @@
       text-decoration: underline;
     }
 
+    .footer-logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    .footer-logo img {
+      max-height: 80px;
+      width: auto;
+      opacity: 0.95;
+      display: block;
+    }
+
     .footer-copyright {
       text-align: center;
       font-size: 0.875rem;
@@ -1315,6 +1329,9 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
+      <div class="footer-logo">
+        <img src="/logo.png" alt="Epigenética Barcelona" />
+      </div>
       <div class="footer-legal">
         <p>
           <strong>Declaración de protección de datos:</strong> Al enviar este formulario, aceptas que Epigenética Barcelona trate tus datos para enviarte información comercial y comunicaciones relacionadas con sus servicios de Evaluación Integral de Salud Celular y Longevidad, diagnóstico epigenético mediante PRISM iO y asistencia personalizada. Tus datos no se cederán a terceros y serán tratados conforme a la normativa vigente de protección de datos (RGPD y LOPD-GDD). Podrás ejercer tus derechos de acceso, rectificación, supresión, oposición, limitación del tratamiento y portabilidad, así como darte de baja en cualquier momento contactando con nosotros.
