--- a/reset_5/index.html
+++ b/reset_5/index.html
@@ -345,6 +345,13 @@
 
     </main>
 
+    <footer class="mt-12 py-8 border-t border-gray-200 bg-gray-50">
+        <div class="flex justify-center mb-4">
+            <img src="/logo.png" alt="Epigenética Barcelona" class="max-h-20 w-auto opacity-95" />
+        </div>
+        <p class="text-xs text-gray-500 text-center">&copy; Epigenética Barcelona</p>
+    </footer>
+
     <script>
         lucide.createIcons();
 
